feat: button to update show info on show page feat: add new route to update show info
